# pyjack

./: .gitignore  Pipfile  README.md  output.csv  pyproject.toml  setup.py  tester.ipynb
pyjack/: __init__.py  game.py  human.json  player.py  shoe.py
pyjack21/: __init__.py  game.py  human.json  human.py  player.py  shoe.py
pyjack21/tests/: test_card.py  test_hand.py  test_player.py  test_shoe.py
